# cs-insights-prediction-endpoint

./: .env.development  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.development  Dockerfile.test  Pipfile  README.md  dev.py  docker-compose.yml  gen_doc.py  index.html  mypy.ini  oas.json  prod.py  pyproject.toml  sample.env  setup.py  test.env
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
cs_insights_prediction_endpoint/: __init__.py  app.py
cs_insights_prediction_endpoint/middleware/: auth.py
cs_insights_prediction_endpoint/models/: generic_model.py  lda_model.py  model_hosts.py  model_paper.py  model_token.py  model_token_data.py  model_topic.py  model_user.py  model_user_login.py
cs_insights_prediction_endpoint/routes/: __init__.py  route_auth.py  route_hosts.py  route_model.py  route_model_forward.py  route_status.py  route_topic.py
cs_insights_prediction_endpoint/utils/: remote_storage_controller.py  settings.py  storage_controller.py  version_getter.py
docs/: index.html
nlp_land_prediction_endpoint/: app.py  sample.env
nlp_land_prediction_endpoint/enums/: __init__.py  enum_paper.py
nlp_land_prediction_endpoint/middleware/: auth.py  forward_middleware.py
nlp_land_prediction_endpoint/models/: __init__.py  generic_model.py  lda_model.py  model_hosts.py  model_paper.py  model_token.py  model_token_data.py  model_topic.py  model_user.py
nlp_land_prediction_endpoint/routes/: route_auth.py  route_hosts.py  route_model.py  route_status.py  route_topic.py
nlp_land_prediction_endpoint/utils/: .version_getter.py.swo  __init__.py  remote_storage_controller.py  settings.py  storage_controller.py  version_getter.py
tests/: __init__.py
tests/middleware/: test_auth_route.py  test_forward_middleware.py
tests/models/: test_generic_model.py  test_lda_model.py
tests/routes/: test_hosts_route.py  test_model_forward_route.py  test_model_route.py  test_status_route.py  test_topic_route.py
tests/utils/: test_remote_storage_controller.py  test_storage_controller.py  test_version_getter.py
